Added API - Gateway

--- a/question-service/src/main/resources/application.properties
+++ b/question-service/src/main/resources/application.properties
@@ -1,1 +1,45 @@
+server.port=8081
 spring.application.name=question-service
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Exam
+spring.datasource.username=postgres
+spring.datasource.password=7890
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+logging.level.com.exam.quiz_service=INFO
+
+# root path for quiz Api
+server.servlet.context-path=/quiz-api
+
+
+# properties
+# Use public as default schema (avoid referencing non-existent schema)
+spring.jpa.properties.hibernate.default_schema=public
+
+# Or keep quiz as logical schema but let Hibernate manage tables (use with caution)
+spring.jpa.hibernate.ddl-auto=update
+
+# Configure Hikari maximum pool size (removes undefined/unknown log)
+spring.datasource.hikari.maximum-pool-size=10
+
+
+# File: `src/main/resources/application.properties`
+
+# --- Tomcat access log (embedded Tomcat) ---
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.pattern=%h %l %u %t "%r" %s %b %D
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.rotate=true
+
+# --- log request handling to console ---
+# DispatcherServlet DEBUG prints each handled request/response lifecycle
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
+# more general request mapping info
+logging.level.org.springframework.web=INFO
+
+# --- optional: expose httptrace via Actuator (requires adding dependency below) ---
+management.endpoints.web.exposure.include=health,info,httptrace
+management.endpoint.httptrace.enabled=true
+
+
